# python-argocd

./: .gitignore  LICENSE  setup.cfg
.github/workflows/: python-publish.yml
client/: __init__.py
src/: requirements.txt
src/python_argocd/: account_service.py
src/tests/: test_account.py
tests/: test_account.py
