[metadata]
name = python-argocd
version = 0.0.4
author = Rob McCarthy
author_email = rmccarth@andrew.cmu.edu
description = A python wrapper for the ArgoCD API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rmccarth/python-argocd
project_urls =
    Bug Tracker = https://github.com/rmccarth/python-argocd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = python_argocd
python_requires = >=3.6

[options.packages.find]
where = src 
